--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -35,7 +35,7 @@ section.hero
         p.tagline Твій яскравий початок
         h1.hero__title
           span.text Сучасний комфортний житловий комплекс з широким спектром зручностей гармонійно поєднаний з ТРЦ.
-          span.text Використання даху для прогулянкових зон відпочинку.
+          //- span.text Використання даху для прогулянкових зон відпочинку.
         a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
   .slider-images 
     img(src="img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
