--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -30,12 +30,12 @@ html(lang="uk")
       main.main.container
         .news-card 
             .news-gallery 
-                img(src="img/news-photo1.jpg", alt="новини Grand Palace")
+                img.general-img(src="img/news-photo1.jpg", alt="новини Grand Palace")
                 .gallery-sm-photoes
                     .photo-slider 
-                        img(src="img/news-photo1.jpg", alt="Останні події в ЖК Гранд Палац")
+                        img(src="img/bg-fitness.jpg", alt="Останні події в ЖК Гранд Палац")
                     .photo-slider 
-                        img(src="img/news-photo1.jpg", alt="Актуальні відомості від Grand Palace")
+                        img(src="img/galery4.jpg", alt="Актуальні відомості від Grand Palace")
             .news-description
                 h1 Старт продажу нових черг у grand palace розпочато!
                 hr
