--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -319,7 +319,7 @@ figure.news
     background-size: cover
 
 .news-card
-  padding: 50px 0 100px 0
+  padding: 70px 0 100px 0
 
 .gallery-sm-photoes,
 .news-card
@@ -334,9 +334,24 @@ figure.news
   padding-top: 20px
 
 .photo-slider
-  width: 100%
-  +media(570)
+  width: 45%
+  +media(700)
     width: 48%
+.gallery-sm-photoes
+  img
+    object-fit: cover
+    height: 15vh
+    +media(700)
+      height: 30vh
+    +media(1260)
+      height: 15vw
+
+.general-img
+  object-fit: cover
+  height: 60vw
+  +media(1260)
+    height: 30vw
+
 
 .news-gallery,
 .news-description
