--- a/src/pug/components/documentation.pug
+++ b/src/pug/components/documentation.pug
@@ -6,16 +6,16 @@ section.documentation
     .documentation__items.row
       figure.documentation__item.documentation-item
         .documentation-item__icon
-          +svg("document")
+          +svg("document", 100, 100)
         figcaption Договір оренди
         a.documentation-item__btn.btn(href="document/pdf/dogovir-orendy-zemelnyh-dilyanok.pdf" target="_blank") Переглянути
       figure.documentation__item.documentation-item
         .documentation-item__icon
-          +svg("document")
+          +svg("document", 100, 100)
         figcaption Дозвіл на виконання будівельних робіт
         a.documentation-item__btn.btn(href="document/pdf/dozvil-na-vykonannya-budivelnyh-robit.pdf" target="_blank") Переглянути
       figure.documentation__item.documentation-item
         .documentation-item__icon
-          +svg("document")
+          +svg("document", 100, 100)
         figcaption Технічні умови
         a.documentation-item__btn.btn(href="document/pdf/tehnichni-umovy.pdf" target="_blank") Переглянути
