--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,5 +1,6 @@
 @import components/vars
 @import components/mixins
+@import components/sprite
 
 *, *::before, *::after
   box-sizing: border-box
@@ -373,3 +374,4 @@ figure.news
   top: 50%
   transform: translateY(-50%)
   z-index: 1
+
