--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -8,8 +8,8 @@
       .popap-input_block.flex-popap
         span.cancel-popap
           <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
-            <path class="a" d="m14.7 0.8l1 1-13.9 13.9-1-1z"/>
-            <path class="a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
+            <path fill="#9c1a1a" d="m14.7 0.8l1 1-13.9 13.9-1-1z"/>
+            <path fill="#9c1a1a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
           </svg>
         p.flex-popap.label-flex.input-popap
           label(for="name") Імʼя*
@@ -34,7 +34,7 @@ section.hero
       .left-side.col
         p.tagline Твій яскравий початок
         h1.hero__title
-          span.text Сучасний комфортний житловий комплекс з широким спектром зручностей гармонійно поєднаний з ТРЦ.
+          span.text Grand Palace - простір для життя з високим стандартом у центрі міста
           //- span.text Використання даху для прогулянкових зон відпочинку.
         a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
   .slider-images 
