--- a/src/pug/ru/components/mixins.pug
+++ b/src/pug/ru/components/mixins.pug
@@ -1,3 +1,5 @@
 mixin svg(id, width, height)
   svg(class='icon-sprite icon-sprite__'+id width=width height=height)
-    use(xlink:href='../img/sprite.svg#' + id)
+    include sprite.pug
+    use(href='#' + id)
+    use(xlink:href='img/sprite.svg#' + id)
