--- a/src/pug/ru/index.pug
+++ b/src/pug/ru/index.pug
@@ -27,6 +27,7 @@ html(lang="uk")
       include ../components/vars
       include components/mixins
       include components/header
+      include components/sprite
       main.main
         include components/hero
         include components/real-estate
@@ -36,4 +37,4 @@ html(lang="uk")
         include components/construction-progress
         include components/documentation
       include components/footer
-    script(src="js/scripts.js" defer)
+    script(src="/js/scripts.js" defer)
