--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -7,6 +7,8 @@
         padding: 30px 0 0
 
 .comment-block
+    transition: all 2s ease
+    width: 100%
     padding: 300px 0 50px
     font-family: "Roboto"
     +media(768)
@@ -37,18 +39,18 @@
         padding-bottom: 15px
 
 .carousel-item
-    position: absolute
+    position: relative
     top: 0
 
 .comment
+    position: absolute
     width: 100%
-    padding: 25px
+    padding: 25px 
     background-color: #faf7f3
     border: 1px solid #333
     +media(1024)
-        max-width: 42vw
-    +media(1440)
-        max-width: 42.8vw
+        width: 47%
+
 
 .img-circle
     width: 76px
@@ -105,11 +107,12 @@
 .text-comment-block
     max-height: 100px
     overflow: hidden
-    transition: max-height 1s ease
+    transition: max-height 2s ease
 
 .visible 
+    height: 100%
     max-height: 1000px
-    transition: max-height 1s ease
+    transition: max-height 2s ease
 
 .btn-more-cancel
     display: none
