--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -104,8 +104,10 @@
   top: 20px
   right: 20px
   cursor: pointer
-  path, svg
-    fill: #9c1a1a
+  svg
+    transition: all .5s ease
+    &:hover
+      transform: scale(1.1)
 
 .radio-btn
   font-size: 12px
