--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -251,6 +251,7 @@ figure.news
 
 .tr-news
   display: flex
+  align-items: center
   flex-wrap: wrap
   p
     margin: 0 !important
@@ -390,3 +391,21 @@ figure.news
   transform: translateY(-50%)
   z-index: 1
 
+.news-location
+  display: flex
+  align-items: center
+  svg
+    width: 15px
+    height: 20px
+
+.phone-link
+  display: flex
+  align-items: center
+  svg
+    width: 13px
+    height: 20px
+
+.news-location,
+.phone-link
+  svg
+    margin-right: 10px
