іконки та номер телефону

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -6,7 +6,8 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
           span
       .header-info__item.header__phone.phone-list(itemscope itemtype="http://schema.org/SiteNavigationElement")
         a.phone-link(href='tel:+380980555500', itemprop='url', content="+380980555500")
-          +svg('phone') (098)&nbsp;05-55-500
+          +svg('phone') 
+          |(098)&nbsp;05-55-500
       .header-info__item.header__logo(itemscope itemtype="http://schema.org/Organization")
         a.menu__logo(href='./', itemprop='url')
           img(src='img/logo-grand-palace.svg' alt='Grand Palace - житловий комплекс', itemprop='logo', title="Grand Palace - житловий комплекс")
