--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -39,7 +39,7 @@ section.hero
         a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
   .slider-images 
     img(src="img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
+    img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce", loading="lazy")
     img(src="img/hero2_2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
     img(src="img/hero3_3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
     img(src="img/hero4_4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
