--- a/src/pug/ru/components/hero.pug
+++ b/src/pug/ru/components/hero.pug
@@ -35,12 +35,13 @@ section.hero
         p.tagline Твое яркое начало
         h1.hero__title
           span.text Современный комфортный жилой комплекс с широким спектром удобств гармонично совмещенный с ТРЦ.
+        a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
           //- span.text Использование крыши для прогулочных зон отдыха.
   .slider-images 
-    img(src="img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
-    img(src="img/hero2_2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero3_3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero4_4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
-    img(src="img/hero5_5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
-    img(src="img/hero6_6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
+    img(src="../img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
+    img(src="../img/hero2_2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hero3_3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hero4_4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
+    img(src="../img/hero5_5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
+    img(src="../img/hero6_6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
