--- a/src/pug/ru/components/mixins.pug
+++ b/src/pug/ru/components/mixins.pug
@@ -2,4 +2,4 @@ mixin svg(id, width, height)
   svg(class='icon-sprite icon-sprite__'+id width=width height=height)
     include sprite.pug
     use(href='#' + id)
-    use(xlink:href='img/sprite.svg#' + id)
+    use(xlink:href='../img/sprite.svg#' + id)
