--- a/src/pug/ru/residential.pug
+++ b/src/pug/ru/residential.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="./css/styles.css")
+    link(rel="stylesheet" href="/css/styles.css")
     title Grand Palace - жилая недвижимость в городе Хмельницкий
     meta(name="description" content="Житловий комплекс Grand Palace надасть вам можливість жити, працювати, відпочивати, займатись спортом та іншими повсякденними речами не покидаючи свого житла!")
     meta(name="keywords" content="купить квартиру в ЖК Grand Palace, Жилая недвижимость в элитном жилом комплексе Гранд дворец, купить квартиру в Гранд Дворце")
