--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -8,6 +8,7 @@
 html
   height: 100%
   font-size: 10px
+  
 body
   margin: 0
   height: 100%
@@ -54,7 +55,9 @@ main
 
 figure
   margin: 0
-
+// .overflow
+//   position: absolute
+//   top: -100%
 .body-wrapper
   min-height: 100%
   display: flex
@@ -157,7 +160,7 @@ figure
   +media(1024)
     top: -173.625px
 
-  @import components/sprite
+@import components/sprite
 @import components/custom-select
 @import components/header
 @import components/hero
