ru lang news.html, one-news.html

--- a/src/pug/components/hero-news.pug
+++ b/src/pug/components/hero-news.pug
@@ -14,8 +14,6 @@ section.hero.hero-news
         p.tagline новини
         h1.hero__title
           p   
-            span.text-news Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій 
-          p 
-            span.text-news та новин від нашої компанії!
+            span.text-news Слідкуйте за оновленнями, щоб бути в курсі усіх актуальних подій та новин від нашої компанії!
 
   img(src="img/hero3_3.webp", alt="Комерційні приміщення")
