--- a/src/pug/one-news.pug
+++ b/src/pug/one-news.pug
@@ -52,7 +52,7 @@ html(lang="uk")
                         p.td Терміни здачі -&nbsp; 
                         p II квартал 2025 року та II квартал 2026 року.
                 hr
-                .table-news.table-td-styled
+                .table-news.table-td-styled.tr-news-fix
                     .tr-news
                         p.td Завітайте у відділ продажу 
                         p.news-location
