--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -313,6 +313,9 @@ figure.news
   .tr-news .td
     padding-right: 20px
 
+.tr-news-fix .td
+  min-width: 252px
+
 .news-location
   position: relative
   &::before
