header-line adaptiv

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -415,3 +415,18 @@ figure.news
 .phone-link
   svg
     margin-right: 10px
+
+
+.header__lng-toggle
+  margin-left: 0
+  +media(390)
+    margin-left: auto
+
+.icon__menu
+  position: absolute
+  right: 10px
+  top: 25px
+  +media(390)
+    position: relative
+    right: auto
+    top: 0
