header-line adaptiv

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -430,3 +430,15 @@ figure.news
     position: relative
     right: auto
     top: 0
+
+.phone-list .phone-link 
+  font-size: 1.4rem
+  position: absolute
+  top: 25px
+  left: 25px
+  +media(770)
+    position: relative
+    top: auto
+    left: auto
+  +media(800)
+    font-size: 1.8rem
