--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -11,6 +11,7 @@
     width: 100%
     padding: 300px 0 50px
     font-family: "Roboto"
+    box-sizing: border-box
     +media(768)
         padding: 250px 0 50px
 
@@ -44,12 +45,14 @@
 
 .comment
     position: absolute
+    top: 0
     width: 100%
     padding: 25px 
     background-color: #faf7f3
     border: 1px solid #333
+    box-sizing: border-box
     +media(1024)
-        width: 47%
+        width: 42vw
 
 
 .img-circle
