--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -8,7 +8,7 @@
 html
   height: 100%
   font-size: 10px
-  
+
 body
   margin: 0
   height: 100%
@@ -160,7 +160,7 @@ figure
   +media(1024)
     top: -173.625px
 
-@import components/sprite
+  @import components/sprite
 @import components/custom-select
 @import components/header
 @import components/hero
@@ -357,7 +357,6 @@ figure.news
   +media(1260)
     height: 30vw
 
-
 .news-gallery,
 .news-description
   width: 100%
@@ -412,3 +411,30 @@ figure.news
 .phone-link
   svg
     margin-right: 10px
+    
+.validation
+  position: relative
+
+.phone-validation
+  &:hover
+    background-color: #D9D9D9
+
+.phone-validation.correct-number
+  border: 1px solid #30BC21
+
+.phone-validation.incorrect-number
+  border: 1px solid #DE1A1A
+
+.d-none
+  display: none
+
+.incorect-number-test
+  position: absolute
+  top: 45%
+  left: 50%
+  p
+    font-size: 12px
+    font-weight: 400
+    color: #DE1A1A
+    margin-top: -5px
+    margin-bottom: 10px
