--- a/src/pug/ru/commercial.pug
+++ b/src/pug/ru/commercial.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - коммерческая недвижимость в городе Хмельницкий
     meta(name="description" content="Хотите купить офис или торговое помещение под бизнес в новостройке? В таком случае точно стоит обратить внимание на Grand Palace. Несмотря на то, будь то стрит-ритейл, кафе, рестораны, фитнес-центр или любой бизнес сферы услуг и сервисов, мы поможем подобрать идеальное помещение под бизнес с учетом ваших целей и задач")
     meta(name="keywords" content="купить помещение для бизнеса, купить коммерческое помещение в центре города, коммерческие помещения от Grand Palace")
