--- a/src/pug/ru/news.pug
+++ b/src/pug/ru/news.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - Новини елітного житлового комплексу
     meta(name="description" content="Слідкуйте за оновленнями, щоб бути в курсі усіх подій та новин від компанії Гранд Палац! Лише актуальна та свіжа інформація від забудовника.")
     meta(name="keywords" content="Новини Grand Palace, актуальна інформація по Гранд Палац, список новин та подій Grand Palace")
