--- a/src/pug/ru/one-news.pug
+++ b/src/pug/ru/one-news.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - старт продажу нової черги
     meta(name="description" content="")
     meta(name="keywords" content="")
