--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -32,13 +32,13 @@
       button(type="submit") відправити 
 section.hero
   .container
-    .row
+    .row.center-row-hero
       .left-side.col
-        p.tagline Твій яскравий початок
+        p.tagline Grand Palace
         h1.hero__title
-          span.text Grand Palace - простір для життя з високим стандартом у центрі міста
+          span.text простір для життя з високим стандартом у центрі міста
           //- span.text Використання даху для прогулянкових зон відпочинку.
-        a.open-popap.short-description__btn.btn(href="#") Отримати більше інформації
+        a.open-popap.short-description__btn.btn(href="#") Дізнатися ціну
   .slider-images 
     img(src="img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
     img(src="img/hero.jpg", alt="Сучасний ТРЦ Grand Palce", loading="lazy")
