--- a/src/pug/components/real-estate.pug
+++ b/src/pug/components/real-estate.pug
@@ -1,5 +1,13 @@
 section.real-estate
   .container
+    article.description-main_palace 
+      h2.short-description__title.title
+            span.head-line Про
+            |  комплекс
+      p Відкрийте для себе «Гранд Палас» — ексклюзивний житловий комплекс у центрі Хмельницького, де кожна деталь ретельно продумана для вашої максимальної зручності та комфорту. 
+      p Живіть у центрі подій, насолоджуючись легким доступом до кращих магазинів, ресторанів та культурних закладів міста. 
+      p Життя у «Гранд Палас» — це втілення мрії про ідеальний простір для життя: сучасні просторі квартири з захоплюючими панорамними краєвидами, утепленні мінеральною ватою та з індивідуальними безпечними тепловими пунктами. 
+      p Інтегрований сучасний торгівельний центр, продуктовий супермаркет, фітнес-центр, підземний паркінг з’єднаний з квартирами прямим доступом через ліфти, а також затишні зони відпочинку, дитячий майданчик, ресторан та кафе і все це знаходиться безпосередньо на території комплексу.
     article.real-estate__residential
       .row
         .short-description.col
