--- a/src/sass/components/real-estate.sass
+++ b/src/sass/components/real-estate.sass
@@ -1,8 +1,13 @@
-
+.description-main_palace 
+  p
+    margin-bottom: 10px
+    font-size: 1.5rem
+    +media(768)
+      font-size: 1.8rem
 .real-estate
-  padding: 25px 0
+  padding: 0 0 25
   +media(1024)
-    padding: 50px 0
+    padding: 0 0 50px
   article:not(:last-child)
     margin-bottom: 25px
     .short-description, .images-slider__items
