--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -25,7 +25,7 @@
       margin: 0
       width: 55px
     +media(1024)
-      width: 110px
+      // width: 110px
   .header__social, .header__phone
     flex: 1 1 0%
     text-align: center
@@ -223,8 +223,24 @@
 
 .phone-list
   display: flex
-  flex-direction: column
+  flex-direction: row
   align-items: center
+  span
+    margin-left: 10px
+    svg
+      transition: all .5s ease
+      fill: #9c1a1a
+      &:hover
+        transform: scale(1.15)
+      path
+        fill: #9c1a1a
+
+.flex-icons
+  display: flex
+  justify-content: center
+  align-items: center
+  column-gap: 10px
+
   .phone-link
     position: relative
     display: inline-block
