--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -172,6 +172,8 @@
       height: 100%
       object-fit: cover
       opacity: 0
+    .slider-img
+      opacity: 1
     img.active
       opacity: 1
 
