--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -23,7 +23,7 @@
     +media(768)
       order: 0
       margin: 0
-      width: 55px
+      // width: 55px
     +media(1024)
       // width: 110px
   .header__social, .header__phone
