--- a/src/pug/ru/components/real-estate.pug
+++ b/src/pug/ru/components/real-estate.pug
@@ -1,5 +1,13 @@
 section.real-estate
   .container
+    article.description-main_palace 
+      h2.short-description__title.title
+        span.head-line Про
+        |  комплекс
+      p Откройте для себя «Гранд Палас» – эксклюзивный жилой комплекс в центре Хмельницкого, где каждая деталь тщательно продумана для вашего максимального удобства и комфорта.
+      p Живите в центре событий, наслаждаясь легким доступом к лучшим магазинам, ресторанам и культурным заведениям города.
+      p Жизнь в «Гранд Палас» – это воплощение мечты об идеальном пространстве для жизни: современные просторные квартиры с захватывающими панорамными видами, утеплении минеральной ватой и индивидуальными безопасными тепловыми пунктами.
+      p Интегрированный современный торговый центр, продуктовый супермаркет, фитнес-центр, подземный паркинг соединен с квартирами прямым доступом через лифты, а также уютные зоны отдыха, детская площадка, ресторан и кафе, и все это находится непосредственно на территории комплекса.
     article.real-estate__residential
       .row
         .short-description.col
