--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -110,12 +110,12 @@
 .text-comment-block
     max-height: 100px
     overflow: hidden
-    transition: max-height 2s ease
+    transition: max-height .5s ease
 
 .visible 
     height: 100%
     max-height: 1000px
-    transition: max-height 2s ease
+    transition: max-height .5s ease
 
 .btn-more-cancel
     display: none
