--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -40,10 +40,10 @@ section.hero
           //- span.text Використання даху для прогулянкових зон відпочинку.
         a.open-popap.short-description__btn.btn(href="#") Дізнатися ціну
   .slider-images 
-    img.slider-img(src="img/hero-bg.jpg", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero-bg.jpg", alt="Сучасний ТРЦ Grand Palce", loading="lazy", style="filter: hue-rotate(-45deg)")
-    img(src="img/hero-bg.jpg", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
-    img(src="img/hero-bg.jpg", alt="Проекція нового ТРЦ Grand Palace", loading="lazy", style="filter: hue-rotate(-45deg)")
-    img(src="img/hero-bg.jpg", alt="Житлові квартири в Grand Palace", loading="lazy")
-    img(src="img/hero-bg.jpg", alt="Загальний план будівництва - вигляд ззовні", loading="lazy", style="filter: hue-rotate(-45deg)")
-    img(src="img/hero-bg.jpg", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
+    img.slider-img(src="img/hugo5.jpg", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hugo1.jpg", alt="Сучасний ТРЦ Grand Palce", loading="lazy")
+    img(src="img/hugo2.jpg", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hugo3.jpg", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
+    img(src="img/hugo4.jpg", alt="Житлові квартири в Grand Palace", loading="lazy")
+    img(src="img/hugo5.jpg", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
+    img(src="img/hugo6.jpg", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
