--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -496,3 +496,9 @@ figure.news
     position: relative
     top: auto
     left: auto
+
+
+.menu-active 
+  padding-top: 70px
+  +media(390)
+      padding-top: 0
