--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -512,3 +512,6 @@ header .social-icons
   justify-content: center
   +media(370)
     justify-content: flex-start
+
+.menu-active svg
+  display: none
