--- a/src/pug/components/hero.pug
+++ b/src/pug/components/hero.pug
@@ -11,7 +11,7 @@
             <path fill="#9c1a1a" d="m14.7 0.8l1 1-13.9 13.9-1-1z"/>
             <path fill="#9c1a1a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
           </svg>
-        p.flex-popap.label-flex.input-popap
+        p.flex-popap.label-flex.input-popap.input-popap_name
           label(for="name") Імʼя*
           input(type="text" id="name" name="name") 
         p.flex-popap.label-flex.input-popap
