--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -55,22 +55,24 @@
 
 .popap-input_block
   flex-wrap: wrap
-  +media(1024)
+  +media(768)
     flex-wrap: nowrap
 
 .flex-popap
   display: flex
   justify-content: space-between
-  column-gap: 20px
-
+  // column-gap: 20px
+.input-popap_name
+  +media(768)
+    margin-right: 20px
 .label-flex
   flex-direction: column
 
 .input-popap
   width: 100%
   margin-bottom: 10px
-  +media(1024)
-    width: 250px
+  +media(1440)
+    width: 300px
     margin-bottom: 20px
 
 .question
@@ -87,8 +89,8 @@
 
 .popap-more-info
   position: fixed
-  max-width: 80vw
-  max-height: 90vh
+  width: 90%
+  height: 95%
   top: 50%
   left: 50%
   padding: 30px 20px
@@ -97,9 +99,15 @@
   z-index: 12
   display: none
   +media(1024)
+    width: 65%
+    height: 80%
     padding: 50px 40px
+  +media(1440)
+    width: 40%
+
 .center-row-hero
   align-items: center
+
 .cancel-popap
   position: absolute
   top: 20px
