--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -94,6 +94,9 @@
     width: 60px
     height: 40px
     background-color: #9c1a1a
+    svg
+        width: 30px
+        height: 20px
 
 .star-comment
     display: flex
