--- a/src/sass/components/hero.sass
+++ b/src/sass/components/hero.sass
@@ -90,7 +90,6 @@
 .popap-more-info
   position: fixed
   width: 90%
-  height: 90%
   top: 50%
   left: 50%
   padding: 30px 20px
@@ -98,12 +97,12 @@
   background-color: #f3ece2
   z-index: 12
   display: none
-  +media(768)
-    width: 65%
-    height: 80%
+  +media(1024)
+    width: 55vw
+    height: 43vw
     padding: 50px 40px
   +media(1440)
-    width: 40%
+    width: 50vw
 
 .center-row-hero
   align-items: center
