--- a/src/sass/components/comment-main.sass
+++ b/src/sass/components/comment-main.sass
@@ -9,7 +9,7 @@
 .comment-block
     transition: all 2s ease
     width: 100%
-    padding: 300px 0 0
+    padding: 300px 0 50px
     font-family: "Roboto"
     box-sizing: border-box
     +media(768)
