--- a/src/pug/ru/components/hero.pug
+++ b/src/pug/ru/components/hero.pug
@@ -40,10 +40,10 @@ section.hero
           //- span.text Використання даху для прогулянкових зон відпочинку.
         a.open-popap.short-description__btn.btn(href="#") Узнать цену
   .slider-images 
-    img(src="../img/hero1_1.webp", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
-    img(src="../img/hero.jpg", alt="Сучасний ТРЦ Grand Palce")
-    img(src="../img/hero2_2.webp", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
-    img(src="../img/hero3_3.webp", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
-    img(src="../img/hero4_4.webp", alt="Житлові квартири в Grand Palace", loading="lazy")
-    img(src="../img/hero5_5.webp", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
-    img(src="../img/hero6_6.webp", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
+    img.slider-img(src="../img/hugo5.jpg", alt="Комерційні приміщення для бізнесу у ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hugo1.jpg", alt="Сучасний ТРЦ Grand Palce", loading="lazy")
+    img(src="../img/hugo2.jpg", alt="Зручний паркінг біля ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hugo3.jpg", alt="Проекція нового ТРЦ Grand Palace", loading="lazy")
+    img(src="../img/hugo4.jpg", alt="Житлові квартири в Grand Palace", loading="lazy")
+    img(src="../img/hugo5.jpg", alt="Загальний план будівництва - вигляд ззовні", loading="lazy")
+    img(src="../img/hugo6.jpg", alt="загальний вигляд Елітного ЖК Grand Palace", loading="lazy")
