--- a/src/pug/ru/index.pug
+++ b/src/pug/ru/index.pug
@@ -4,7 +4,7 @@ html(lang="uk")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0")
-    link(rel="stylesheet" href="/css/styles.css")
+    link(rel="stylesheet" href="../css/styles.css")
     title Grand Palace - современное жилье в городе Хмельницкий
     meta(name="description" content="Современный элитный жилой комплекс в центре Хмельницкого. Grand Palace – гарантия твоего удобного проживания с необходимыми удобствами для жизни.")
     meta(name="keywords" content="Жилой комплекс Grand Palace, ТРЦ гранд дворец продажа недвижимости, коммерческие и жилые помещения в Гранд Дворец")
