--- a/src/pug/ru/components/comment-main.pug
+++ b/src/pug/ru/components/comment-main.pug
@@ -10,7 +10,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="/img/comment-photo.png", alt="")
+                                img(src="../img/comment-photo.png", alt="")
                         .name-block 
                             h3 мария Шевченко
                             .star-comment 
@@ -35,7 +35,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="/img/comment-photo.png", alt="")
+                                img(src="../img/comment-photo.png", alt="")
                         .name-block 
                             h3 мария Шевченко
                             .star-comment 
@@ -60,7 +60,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="/img/comment-photo.png", alt="")
+                                img(src="../img/comment-photo.png", alt="")
                         .name-block 
                             h3 мария Шевченко
                             .star-comment 
@@ -85,7 +85,7 @@ section.comment-section
                     .img-block_comment
                         .img-circle
                             picture 
-                                img(src="/img/comment-photo.png", alt="")
+                                img(src="../img/comment-photo.png", alt="")
                         .name-block 
                             h3 мария Шевченко
                             .star-comment 
