--- a/src/pug/ru/components/commercial-overview.pug
+++ b/src/pug/ru/components/commercial-overview.pug
@@ -15,32 +15,32 @@ section.comercial-galery.container
   .galery-block
     .picture-galery 
       picture 
-        sourse(srcset="/img/galery1.jpg" type="image/jpg")
-        img(src="/img/galery1.webp", alt="Зручна парковка біля комерційних приміщень")
+        sourse(srcset="../img/galery1.jpg" type="image/jpg")
+        img(src="../img/galery1.webp", alt="Зручна парковка біля комерційних приміщень")
     .text-block-galery
       .number 01
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
   .galery-block
     .picture-galery 
         picture 
-          sourse(srcset="/img/galery2.jpg" type="image/jpg")
-          img(src="/img/galery2.webp", alt="Особистий паркінг для мешканців ЖК Гранд Палац")
+          sourse(srcset="../img/galery2.jpg" type="image/jpg")
+          img(src="../img/galery2.webp", alt="Особистий паркінг для мешканців ЖК Гранд Палац")
     .text-block-galery
       .number 02
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
   .galery-block
     .picture-galery 
         picture 
-          sourse(srcset="/img/galery3.jpg" type="image/jpg")
-          img(src="/img/galery3.webp", alt="Чудові краєвиди на місто")
+          sourse(srcset="../img/galery3.jpg" type="image/jpg")
+          img(src="../img/galery3.webp", alt="Чудові краєвиди на місто")
     .text-block-galery
       .number 03
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
   .galery-block
     .picture-galery 
         picture 
-          sourse(srcset="/img/galery4.jpg" type="image/jpg")
-          img(src="/img/galery4.webp", alt="Панорамні вікна з красивими краєвидами міста")
+          sourse(srcset="../img/galery4.jpg" type="image/jpg")
+          img(src="../img/galery4.webp", alt="Панорамні вікна з красивими краєвидами міста")
     .text-block-galery
       .number 04
       p.text-galery Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
