--- a/src/pug/ru/index.pug
+++ b/src/pug/ru/index.pug
@@ -37,4 +37,4 @@ html(lang="uk")
         include components/comment-main
         include components/documentation
       include components/footer
-    script(src="/js/scripts.js" defer)
+    script(src="../js/scripts.js" defer)
