--- a/src/pug/ru/commercial.pug
+++ b/src/pug/ru/commercial.pug
@@ -35,4 +35,4 @@ html(lang="uk")
         include components/commercial-plan
 
       include components/footer
-    script(src="/js/scripts.js" defer)
+    script(src="../js/scripts.js" defer)
