--- a/src/pug/ru/components/hero-news.pug
+++ b/src/pug/ru/components/hero-news.pug
@@ -16,4 +16,4 @@ section.hero.hero-news
           p   
             span.text-news Следите за обновлениями, чтобы быть в курсе всех актуальных событий и новостей от нашей компании!
 
-  img(src="/img/hero3_3.webp", alt="Комерційні приміщення")
+  img(src="../img/hero3_3.webp", alt="Комерційні приміщення")
