--- a/src/pug/ru/contacts.pug
+++ b/src/pug/ru/contacts.pug
@@ -34,4 +34,4 @@ html(lang="uk")
 
 
       include components/footer
-    script(src="/js/scripts.js" defer)
+    script(src="../js/scripts.js" defer)
