--- a/src/pug/ru/news.pug
+++ b/src/pug/ru/news.pug
@@ -34,4 +34,4 @@ html(lang="uk")
           include components/news-list
 
       include components/footer
-    script(src="/js/scripts.js")
+    script(src="../js/scripts.js")
