--- a/src/pug/ru/one-news.pug
+++ b/src/pug/ru/one-news.pug
@@ -33,12 +33,12 @@ html(lang="uk")
       main.main.container
         .news-card 
             .news-gallery 
-                img.general-img(src="/img/news-photo1.jpg", alt="новини Grand Palace")
+                img.general-img(src="../img/news-photo1.jpg", alt="новини Grand Palace")
                 .gallery-sm-photoes
                     .photo-slider 
-                        img(src="/img/bg-fitness.jpg", alt="Останні події в ЖК Гранд Палац")
+                        img(src="../img/bg-fitness.jpg", alt="Останні події в ЖК Гранд Палац")
                     .photo-slider 
-                        img(src="/img/galery4.jpg", alt="Актуальні відомості від Grand Palace")
+                        img(src="../img/galery4.jpg", alt="Актуальні відомості від Grand Palace")
             .news-description
                 h1 Старт продаж новых очередей в grand palace начат!
                 hr
@@ -68,6 +68,6 @@ html(lang="uk")
                                 |(098)&nbsp;055 55 00
                 a.short-description__btn.btn(href="news.html") все новости
 
-    script(src="/js/scripts.js")
+    script(src="../js/scripts.js")
     include components/footer
 
