--- a/src/pug/ru/components/header.pug
+++ b/src/pug/ru/components/header.pug
@@ -22,8 +22,8 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
       .header-info__item.header__social.social-list(itemscope itemtype="http://schema.org/SiteNavigationElement")
         a.social-link(href='https://www.facebook.com/GrandPalace.km' target="_blank", itemprop='sameAs')
           +svg('fb', 31, 31)
-        a.social-link(href='https://www.instagram.com/grand_palace_km/' target="_blank", itemprop='sameAs')
-          object(class='icon' type='image/svg+xml' data='/img/instagram.svg' width='31' height='31')
+        a.social-link(href='https://www.instagram.com/grand_palace_km/')
+            object(class='icon' type='image/svg+xml' data='../img/instagram.svg' width='31' height='31')
       .header-info__item.header__lng-toggle(itemscope itemtype="http://schema.org/SiteNavigationElement")
         a.active(href='#' data-lang="uk", itemprop='url') Укр
         a(href='#' data-lang="ru", itemprop='url') Рус
