--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -327,7 +327,9 @@ figure.news
     background-size: cover
 
 .news-card
-  padding: 70px 0 100px 0
+  padding: 30px 0 100px 0
+  +media(490)
+    padding: 70px 0 100px 0
 
 .gallery-sm-photoes,
 .news-card
