--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -405,6 +405,10 @@ figure.news
     width: 15px
     height: 20px
 
+
+.menu-active .phone-link
+  display: none
+  
 .phone-link
   display: flex
   align-items: center
