--- a/src/pug/ru/components/header.pug
+++ b/src/pug/ru/components/header.pug
@@ -8,7 +8,7 @@ header.header(itemscope itemtype="http://schema.org/WPHeader")
         .flex-icons
           a.phone-link(href='tel:+380980555500', itemprop='url', content="+380980555500")
             +svg('phone') 
-            |(098)&nbsp;05-55-500
+            strong (098)&nbsp;05-55-500
           span.social-icons.flex-icons
             a.wsup(href="#")
               +svg('wsup', 29, 29) 
