--- a/src/pug/ru/components/hero.pug
+++ b/src/pug/ru/components/hero.pug
@@ -12,7 +12,7 @@
             <path fill="#9c1a1a" d="m0.8 1.8l1-1 13.9 13.9-1 1z"/>
           </svg>
         p.flex-popap.label-flex.input-popap.input-popap_name
-          label(for="name") Імʼя*
+          label(for="name") Имя*
           input(type="text" id="name" name="name") 
         p.flex-popap.label-flex.input-popap
           label.validation(for="phoneValidation") Номер телефона*
